--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     video {
       margin-top: 20px;
-      width: 30%;   /* %25 idi → %20 büyütülerek %30 yapıldı */
+      width: 60%;   /* %20 büyütüldü (50% → 60%) */
       height: auto;
       border: 2px solid #fff;
       border-radius: 10px;
@@ -23,13 +23,13 @@
     }
     .spotify-wrapper {
       margin-top: 20px;
-      width: 112%;   /* %80 idi → %40 büyütülerek %112 yapıldı */
-      max-width: 700px; /* büyümeye uygun üst limit artırıldı */
+      width: 112%;   /* %40 genişletildi (80% → 112%) */
+      max-width: 700px;
       z-index: 1;
     }
     iframe {
       width: 100% !important;
-      height: 212px !important;  /* 152px idi → %40 büyütülerek 212px yapıldı */
+      height: 213px !important; /* %40 büyütüldü (152px → 213px) */
       border: none;
     }
   </style>
@@ -37,7 +37,7 @@
 <body>
   <!-- Büyütülmüş video -->
   <video id="bg-video" muted>
-    <source src="video.mp4" type="video/mp4">
+    <source src="video3.mp4" type="video/mp4">
     Tarayıcınız video etiketini desteklemiyor.
   </video>
 
