--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     video {
       margin-top: 20px;
-      width: 60%;   /* %20 büyütüldü (50% → 60%) */
+      width: 60%;   /* %20 büyütülmüş hali */
       height: auto;
       border: 2px solid #fff;
       border-radius: 10px;
@@ -23,13 +23,13 @@
     }
     .spotify-wrapper {
       margin-top: 20px;
-      width: 112%;   /* %40 genişletildi (80% → 112%) */
-      max-width: 700px;
+      width: 96%;    /* %80 → %96 (%20 artış) */
+      max-width: 600px; /* 500px → 600px */
       z-index: 1;
     }
     iframe {
       width: 100% !important;
-      height: 213px !important; /* %40 büyütüldü (152px → 213px) */
+      height: 228px !important; /* 152px → 228px (%50 artış) */
       border: none;
     }
   </style>
